--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
         </nav>
     </main>
     
+    <footer class="footer">
+        <p>Thanks to <a href="https://www.pickuplimes.com/recipe/">Pick up lime website</a></p>   
+    </footer>
+    
 </body>
 </html>
